tests/should_fail/logic_prophetic_impl.stderr
error: Expected `f` to be a logic function as specified by the trait declaration
  --> logic_prophetic_impl.rs:11:5
   |
11 |     fn f() {
   |     ^^^^^^

error: aborting due to 1 previous error

